2002-04-01  Seth Robertson  <seth@startide.sysdetect.com>

	* include/libbk_oscompat.h: Size defintions for those who don't have 'em

	* lib/b_string.c (bk_string_printbuf): It is too confusing when
	address bytes and data bytes are next to each other.

2002-03-28  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_unique_string): Create a (very likely)
	unique string.

	* lib/b_md5.c (bk_MD5_extract_printable): Copy out md5 digest into
	32 byte printabe buffer.

	* lib/b_ioh.c (ioht_vector_queue): Same fix as below. 

	* lib/b_pollio.c (bk_polling_io_write): Keep trying to queue data
	if refused until you either succeed or faile miserably.

	* lib/b_ioh.c (ioh_queue): Don't refuse to queue a large buffer if
	the output queue is empty (even of said buffer exceeds the queue max).

2002-03-27  James Tanis  <jtt@saint.sysdetect.com>

	* lib/b_string.c (bk_string_alloc_printf): Function to allocate a
	string with a printf API.

2002-03-28  Seth Robertson  <seth@winwood.sysdetect.com>

	* include/libbk.h (BK_FLAG_ALLSET): Macro to test for all flags
	being set, not any flag.  (Should this be ARESET instead?)

2002-03-26  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_include.h: work around Insure problems with
	_FILE_OFFSET_BITS 64

	* test/Makefile (BK_SIMPLE_INTERNALPROGS): support "make test_fun"

	* test/test_config.c (main): bk_general_debug_config obviates
	bk_debug_setconfig

	* test/test_getbyfoo.c (main): bk_general_debug_config obviates
	bk_debug_setconfig

	* test/test_time.c (main): use BK_RETURN to keep Insure happy

	* test/test_bio.c, test/test_config.c, test/test_errorstuff.c:
	* test/test_fun.c, test/test_getbyfoo.c, test/test_ioh.c:
	* test/test_locks.c, test/test_stringconv.c, test/test_time.c:
	* test/test_url.c, test/testhashspeed.c:
	* test/testrandidea.c: use LOG_USER, not BK_ERR or LOG_LOCAL0
	
2002-03-19  James Tanis  <jtt@saint.sysdetect.com>

	* include/libbk.h (BK_USECTONSEC): Convert usecs <=> nsecs.
