@@ -7,6 +7,7 @@ test_getbyfoo
 test_ioh
 test_locks
 test_printbuf
+test_string
 test_stringconv
 test_time
 test_url
