@@ -1,0 +1,134 @@
+#if !defined(lint) && !defined(__INSIGHT__)
+static char libbk__rcsid[] = "$Id: test_string.c,v 1.1 2002/04/04 23:57:22 dupuy Exp $";
+static char libbk__copyright[] = "Copyright (c) 2001";
+static char libbk__contact[] = "<projectbaka@baka.org>";
+#endif /* not lint */
+/*
+ * ++Copyright LIBBK++
+ *
+ * Copyright (c) 2001 The Authors.  All rights reserved.
+ *
+ * This source code is licensed to you under the terms of the file
+ * LICENSE.TXT in this release for further details.
+ *
+ * Mail <projectbaka@baka.org> for further information
+ *
+ * --Copyright LIBBK--
+ */
+
+#include <libbk.h>
+
+
+
+#define MAXLINE 1024
+
+
+
+/*
+ * Information of international importance to everyone
+ * which cannot be passed around.
+ */
+struct global_structure
+{
+} Global;
+
+
+
+/*
+ * Information about basic program runtime configuration
+ */
+struct program_config
+{
+  bk_flags pc_flags;
+#define PC_VERBOSE	1
+};
+
+
+
+void usage(bk_s B);
+int proginit(bk_s B, struct program_config *pconfig);
+void progrun(bk_s B, struct program_config *pconfig);
+
+
+int
+main(int argc, char **argv, char **envp)
+{
+  bk_s B = NULL;				/* Baka general structure */
+  BK_ENTRY(B, __FUNCTION__, __FILE__, "SIMPLE");
+  int getopterr = 0;
+  extern char *optarg;
+  extern int optind;
+  struct program_config Pconfig, *pconfig;
+
+  if (!(B=bk_general_init(argc, &argv, &envp, BK_ENV_GWD("BK_ENV_CONF_APP", BK_APP_CONF), NULL, 64, LOG_USER, 0)))
+  {
+    fprintf(stderr,"Could not perform basic initialization\n");
+    exit(254);
+  }
+
+  bk_fun_reentry(B);
+
+  pconfig = &Pconfig;
+  memset(pconfig,0,sizeof(*pconfig));
+
+  if (getopterr)
+  {
+    usage(B);
+    bk_exit(B,254);
+  }
+    
+  if (proginit(B, pconfig) < 0)
+  {
+    bk_die(B,254,stderr,"Could not perform program initialization\n",BK_FLAG_ISSET(pconfig->pc_flags, PC_VERBOSE)?BK_WARNDIE_WANTDETAILS:0);
+  }
+
+  progrun(B, pconfig);
+  bk_exit(B,0);
+  abort();
+  BK_RETURN(B,255);				/* Insight is stupid */
+}
+
+
+
+/*
+ * Usage
+ */
+void usage(bk_s B)
+{
+  fprintf(stderr,"Usage: %s: [-dv]\n",BK_GENERAL_PROGRAM(B));
+}
+
+
+
+/*
+ * Initialization
+ */
+int proginit(bk_s B, struct program_config *pconfig)
+{
+  BK_ENTRY(B, __FUNCTION__,__FILE__,"SIMPLE");
+  BK_RETURN(B, 0);
+}
+
+
+#define TEST(expr,res) \
+do { if ((expr) != res) fprintf(stderr, "%s != %s\n", #expr, #res); } while (0)
+
+/*
+ * Normal processing
+ */
+void progrun(bk_s B, struct program_config *pconfig)
+{
+  BK_ENTRY(B, __FUNCTION__,__FILE__,"SIMPLE");
+
+  TEST(bk_strnspacecmp(B, "a", "b", 1, 1), -1);
+
+  TEST(bk_strnspacecmp(B, "a b", "a \t a", 5, 5), 1);
+
+  TEST(bk_strnspacecmp(B, "a b", "a \t b", 5, 5), 0);
+
+  TEST(bk_strnspacecmp(B, "a b", "a \t b", 2, 5), 0);
+
+  TEST(bk_strnspacecmp(B, "a \t b", "a b", 5, 3), 0);
+
+  BK_VRETURN(B);
+}
